second task done

--- a/Dobre/Dobre.vcxproj
+++ b/Dobre/Dobre.vcxproj
@@ -108,10 +108,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>"C:\CPP\glfw32\include";"C:\CPP\glm";"C:\CPP\glew\include"</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>"C:\CPP\glfw32\lib-vc2022";"C:\CPP\glew\lib\Release\Win32";"C:\CPP\glew\bin\Release\Win32"</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);glfw3.lib;opengl32.lib;glew32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -131,15 +134,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AShape.cpp" />
-    <ClCompile Include="Dobre.cpp" />
-    <ClCompile Include="StringMan.cpp" />
-    <ClCompile Include="Triangle.cpp" />
+    <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Model.cpp" />
+    <ClCompile Include="OPENGL.cpp" />
+    <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AShape.h" />
-    <ClInclude Include="StringMan.h" />
-    <ClInclude Include="Triangle.h" />
+    <ClInclude Include="Application.h" />
+    <ClInclude Include="Model.h" />
+    <ClInclude Include="Scene.h" />
+    <ClInclude Include="Shader.h" />
+    <ClInclude Include="sphere.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
